--- a/linkpreviewer/build.gradle
+++ b/linkpreviewer/build.gradle
@@ -7,7 +7,7 @@ android {
 
 
     defaultConfig {
-        minSdkVersion 19
+        minSdkVersion 24
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -32,6 +32,9 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.2.0'
 
     implementation 'org.jsoup:jsoup:1.12.2'
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
